--- a/locale/de/foreman_setup.po
+++ b/locale/de/foreman_setup.po
@@ -1,7 +1,7 @@
 # foreman_setup
-# 
+#
 # This file is distributed under the same license as foreman_setup.
-# 
+#
 # Translators:
 # Christina Gurski <Gurski_christina@yahoo.de>, 2015
 # Ettore Atalan <atalanttore@googlemail.com>, 2014
@@ -9,7 +9,6 @@ msgid ""
 msgstr ""
 "Project-Id-Version: foreman_setup 7.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-08-20 09:25+0100\n"
 "PO-Revision-Date: 2017-09-20 10:08+0000\n"
 "Last-Translator: Christina Gurski <Gurski_christina@yahoo.de>\n"
 "Language-Team: German (http://www.transifex.com/foreman/foreman/language/de/)\n"
@@ -28,16 +27,10 @@ msgstr "Aktivierungsschlüsselkonfiguration"
 msgid "Add and manage compute resources (virtualization and cloud)"
 msgstr "Rechnerressourcen hinzufügen und verwalten (Virtualisierung und Cloud)"
 
-msgid ""
-"All of the necessary components have been set up for provisioning support.  "
-"You can now provision new hosts by registering them from the Hosts page, "
-"then PXE-boot the server on the subnet set up earlier."
+msgid "All of the necessary components have been set up for provisioning support.  You can now provision new hosts by registering them from the Hosts page, then PXE-boot the server on the subnet set up earlier."
 msgstr "Sämtliche benötigten Komponenten wurden für die Bereitstellungsunterstützung aufgesetzt. Sie können nun neue Hosts bereitstellen, indem Sie diese von der Hosts-Seite aus registrieren und danach den Server auf dem zuvor aufgesetzten Subnetz PXE-booten,."
 
-msgid ""
-"All of the necessary network information has been collected, now run the "
-"Foreman installer again with the necessary arguments to configure "
-"provisioning."
+msgid "All of the necessary network information has been collected, now run the Foreman installer again with the necessary arguments to configure provisioning."
 msgstr "Alle erforderlichen Netzwerkinformationen wurden erfasst. Führen Sie das Foreman-Installationsprogramm erneut mit den erforderlichen Argumenten aus, um die Bereitstellung zu konfigurieren."
 
 msgid "Completion"
@@ -82,10 +75,7 @@ msgstr "Host %s verfügt über mindestens eine Netzwerkschnitstelle"
 msgid "Hostname"
 msgstr "Hostname"
 
-msgid ""
-"If installation media has already been set up, it can be selected below and "
-"the wizard will complete the necessary associations.  Otherwise use the "
-"fields below, or the Installation Media page in Foreman to add new media."
+msgid "If installation media has already been set up, it can be selected below and the wizard will complete the necessary associations.  Otherwise use the fields below, or the Installation Media page in Foreman to add new media."
 msgstr "Wurde ein Installationsmedium bereits aufgesetzt, kann es unten ausgewählt werden, und der Assistent erledigt die erforderlichen Zuweisungen. Verwenden Sie andernfalls die Felder unten oder die Seite \"Installationsmedien\" in Foreman, um neue Medien hinzuzufügen."
 
 msgid "Install provisioning with DHCP"
@@ -172,9 +162,7 @@ msgstr "Bereitstellung aufsetzen"
 msgid "Smart proxy"
 msgstr "Smart Proxy"
 
-msgid ""
-"Some information about the location of installation media for the operating "
-"system used for provisioning is now required."
+msgid "Some information about the location of installation media for the operating system used for provisioning is now required."
 msgstr "Nun sind einige Informationen zum Standort der Installationsmedien für das Betriebssystem erforderlich, die für die Bereitstellung verwendet werden."
 
 msgid "Spacewalk hostname is missing"
@@ -192,24 +180,16 @@ msgstr "Subnetz %s erfolgreich aktualisiert."
 msgid "The DNS domain name to provision hosts into"
 msgstr "Der DNS-Domänenname, in dem Hosts bereitgestellt werden"
 
-msgid ""
-"The configuration set up is all accessible under the Infrastructure menu, "
-"e.g. Infrastructure > Subnets, and can be changed in the web interface.  You"
-" can return to this set up process through <b>Infrastructure > Provisioning "
-"Setup</b> to change settings or add new provisioning capabilities."
+msgid "The configuration set up is all accessible under the Infrastructure menu, e.g. Infrastructure > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>Infrastructure > Provisioning Setup</b> to change settings or add new provisioning capabilities."
 msgstr "Der Zugriff auf das gesamte Konfigurations-Setup ist im Menü \"Infrastruktur\", z.B. Infrastruktur > Subnetze, möglich und kann im Webinterface geändert werden. Über <b>Infrastruktur > Bereitstellungs-Setup</b> können Sie zu diesem Setup-Prozess zurückkehren, um die Einstellungen zu ändern oder neue Bereitstellungs-Ressourcen hinzuzufügen."
 
 msgid "The following operating system will be configured for provisioning:"
 msgstr "Folgendes Betriebssystem wird für die Bereitstellung konfiguriert:"
 
-msgid ""
-"This wizard will help set up Foreman for full host provisioning.  Before we "
-"begin, a few requirements will be verified."
+msgid "This wizard will help set up Foreman for full host provisioning.  Before we begin, a few requirements will be verified."
 msgstr "Dieser Assistent unterstützt Sie bei der Einrichtung von Foreman zur vollständigen Hostbereitstellung. Bevor wir beginnen, sind einige Anforderungen zu verifizieren."
 
-msgid ""
-"To provision hosts, some configuration values are needed for the "
-"provisioning subnet attached to the Foreman server."
+msgid "To provision hosts, some configuration values are needed for the provisioning subnet attached to the Foreman server."
 msgstr "Um Hosts bereitzustellen, werden einige Konfigurationswerte für die Bereitstellung des mit dem Foreman-Server verbundenen Subnetzes benötigt."
 
 msgid "Type"
@@ -218,7 +198,5 @@ msgstr "Typ"
 msgid "Use an existing installation medium"
 msgstr "Vorhandenes Installationsmedium verwenden"
 
-msgid ""
-"Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an "
-"appropriate activation key below, otherwise leave blank."
+msgid "Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an appropriate activation key below, otherwise leave blank."
 msgstr "User, die Spacewalk, Red Hat Network, oder Red Hat Satellite 5 verwenden, sollten unten  einen zugehörigen Aktivierungsschlüssel eingeben. Andernfalls bitte freilassen."
