--- a/locale/pt_BR/foreman_setup.po
+++ b/locale/pt_BR/foreman_setup.po
@@ -1,7 +1,7 @@
 # foreman_setup
-# 
+#
 # This file is distributed under the same license as foreman_setup.
-# 
+#
 # Translators:
 # Luiz Henrique Vasconcelos <luizvasconceloss@yahoo.com.br>, 2016
 # Luiz Henrique Vasconcelos <luizvasconceloss@yahoo.com.br>, 2015
@@ -10,10 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: foreman_setup 7.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-08-20 09:25+0100\n"
 "PO-Revision-Date: 2019-03-18 15:24+0000\n"
 "Last-Translator: Bryan Kearney <bryan.kearney@gmail.com>\n"
-"Language-Team: Portuguese (Brazil) (http://www.transifex.com/foreman/foreman/language/pt_BR/)\n"
+"Language-Team: Portuguese (Brazil) (http://www.transifex.com/foreman/foreman/l"
+"anguage/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -29,16 +29,10 @@ msgstr "Configuração da chave de ativação"
 msgid "Add and manage compute resources (virtualization and cloud)"
 msgstr ""
 
-msgid ""
-"All of the necessary components have been set up for provisioning support.  "
-"You can now provision new hosts by registering them from the Hosts page, "
-"then PXE-boot the server on the subnet set up earlier."
+msgid "All of the necessary components have been set up for provisioning support.  You can now provision new hosts by registering them from the Hosts page, then PXE-boot the server on the subnet set up earlier."
 msgstr ""
 
-msgid ""
-"All of the necessary network information has been collected, now run the "
-"Foreman installer again with the necessary arguments to configure "
-"provisioning."
+msgid "All of the necessary network information has been collected, now run the Foreman installer again with the necessary arguments to configure provisioning."
 msgstr ""
 
 msgid "Completion"
@@ -83,10 +77,7 @@ msgstr ""
 msgid "Hostname"
 msgstr "Nome de máquina"
 
-msgid ""
-"If installation media has already been set up, it can be selected below and "
-"the wizard will complete the necessary associations.  Otherwise use the "
-"fields below, or the Installation Media page in Foreman to add new media."
+msgid "If installation media has already been set up, it can be selected below and the wizard will complete the necessary associations.  Otherwise use the fields below, or the Installation Media page in Foreman to add new media."
 msgstr ""
 
 msgid "Install provisioning with DHCP"
@@ -173,9 +164,7 @@ msgstr "Configurar o provisionamento"
 msgid "Smart proxy"
 msgstr "Smart proxy"
 
-msgid ""
-"Some information about the location of installation media for the operating "
-"system used for provisioning is now required."
+msgid "Some information about the location of installation media for the operating system used for provisioning is now required."
 msgstr ""
 
 msgid "Spacewalk hostname is missing"
@@ -193,24 +182,16 @@ msgstr ""
 msgid "The DNS domain name to provision hosts into"
 msgstr ""
 
-msgid ""
-"The configuration set up is all accessible under the Infrastructure menu, "
-"e.g. Infrastructure > Subnets, and can be changed in the web interface.  You"
-" can return to this set up process through <b>Infrastructure > Provisioning "
-"Setup</b> to change settings or add new provisioning capabilities."
+msgid "The configuration set up is all accessible under the Infrastructure menu, e.g. Infrastructure > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>Infrastructure > Provisioning Setup</b> to change settings or add new provisioning capabilities."
 msgstr ""
 
 msgid "The following operating system will be configured for provisioning:"
 msgstr ""
 
-msgid ""
-"This wizard will help set up Foreman for full host provisioning.  Before we "
-"begin, a few requirements will be verified."
+msgid "This wizard will help set up Foreman for full host provisioning.  Before we begin, a few requirements will be verified."
 msgstr ""
 
-msgid ""
-"To provision hosts, some configuration values are needed for the "
-"provisioning subnet attached to the Foreman server."
+msgid "To provision hosts, some configuration values are needed for the provisioning subnet attached to the Foreman server."
 msgstr ""
 
 msgid "Type"
@@ -219,7 +200,5 @@ msgstr "Tipo"
 msgid "Use an existing installation medium"
 msgstr "Usar uma media de instalação que já existe"
 
-msgid ""
-"Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an "
-"appropriate activation key below, otherwise leave blank."
+msgid "Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an appropriate activation key below, otherwise leave blank."
 msgstr "Usuários do Spacewalk, Red Hat Network, ou Red Hat Satellite 5 devem entrar com uma chave de ativação apropriada abaixo, ou então deixá-la em branco"
